added link to Qiita article to README

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[LINE Notify](https://notify-bot.line.me/ja/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Modules"
    ]
   },
