--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -11,14 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[LINE Notify](https://notify-bot.line.me/ja/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Modules"
+    "## Libraries"
    ]
   },
   {
@@ -37,6 +30,13 @@
    "metadata": {},
    "source": [
     "## Setting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Access token can be obtained from [LINE Notify](https://notify-bot.line.me/ja/)."
    ]
   },
   {
@@ -274,12 +274,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In Console"
+    "### From Command Line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
